test/classes/generic/badFieldExprs/bad-default-expr.param.good
bad-default-expr.chpl:24: In function 'main':
bad-default-expr.chpl:30: error: error while resolving type 'BadParamDefault()'
bad-default-expr.chpl:17: note: param field 'x' has a default expression that does not resolve to a param
