test/classes/generic/badFieldExprs/bad-default-expr.compopts
-scase=0 # bad-default-expr.type.good
-scase=1 # bad-default-expr.param.good
-scase=2 # bad-default-expr.value.good
